test/duplicate-groups/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
spec:
  rules:
  - host: my-service.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-service
          servicePort: http
