test/duplicate-groups/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networking-netpol
spec:
  podSelector:
    matchLabels:
      role: db

---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: extensions-netpol
spec:
  podSelector:
    matchLabels:
      role: db
